src/objects/CollectionTool__c.object
<CustomObject>
    <description>IQVIAPSA-7585 CollectionTool</description>
    <fields>
        <fullName>Activity_ID__c</fullName>
        <description>IQVIAPSA-8469 this field is  used in Quote section for change order bid .</description>
        <label>Activity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allotted_of_Reimbursements_Per_Visit__c</fullName>
        <description>IQVIAPSA-8852</description>
        <label>Allotted # of Reimbursements Per Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allotted_of_Stipends_Per_Patient_Visit__c</fullName>
        <description>IQVIAPSA-8852</description>
        <label>Allotted # of Stipends Per Patient Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amendments__c</fullName>
        <description>IQVIAPSA-8972</description>
        <inlineHelpText>Base service inc (1) amendment per payee</inlineHelpText>
        <label>Amendments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Case_Volume__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>Annual Case Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Volume_Of_Case_Versions__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>Annual Volume Of Case Versions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Any_Interface_in_Scope__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>Any Interface in Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attachments_In_Scope__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>Attachments In Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bid_History_Study_Number__c</fullName>
        <description>IQVIAPSA-7585 Bid History Study Number</description>
        <formula>Bid_History__r.Opportunity_Number__c+IF(
AND(Study_Number__c&gt;0,Study_Number__c&lt;10) ,
TEXT(0)+TEXT(Study_Number__c),
TEXT(Study_Number__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bid History Study Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IQVIAPSA-7585 Bid History</description>
        <label>Bid History</label>
        <referenceTo>Bid_History__c</referenceTo>
        <relationshipLabel>Collection Tools</relationshipLabel>
        <relationshipName>Collection_Tools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Biological_Matrix_Global__c</fullName>
        <description>IQVIAPSA-7585 Biological Matrix, IQVIAPSA-9102 Promote to Global Value Set</description>
        <label>Biological Matrix</label>
        <type>Picklist</type>
        <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Matrix</valueSetName>
    </valueSet>
    </fields>
    <fields>
        <fullName>COA_Library_Assessment__c</fullName>
        <description>IQVIAPSA-7689</description>
        <label>COA Library Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01_Not within Library</fullName>
                </value>
                <value>
                    <fullName>12-item Short HIV Stigma Scale</fullName>
                </value>
                <value>
                    <fullName>28/28 Swollen and Tender Joint Count (SJC28/TJC28)</fullName>
                </value>
                <value>
                    <fullName>30 second sit to stand / 30 second chair stand test (30CST)</fullName>
                </value>
                <value>
                    <fullName>36-Item Short Form Survey (SF-36 v1)</fullName>
                </value>
                <value>
                    <fullName>44 Swollen and Tender Joint Count (STJC44)</fullName>
                </value>
                <value>
                    <fullName>6 Minutes Walking Test (6MWT)</fullName>
                </value>
                <value>
                    <fullName>66/68 Swollen and Tender Joint Count (SJC66/TJC68)</fullName>
                </value>
                <value>
                    <fullName>9 - Hole Peg Test Device (NHPT 9-HPT)</fullName>
                </value>
                <value>
                    <fullName>Abbreviated Sexual Function Questionnaire (ASFQ)</fullName>
                </value>
                <value>
                    <fullName>Abnormal Involuntary Movement Scale (AIMS)</fullName>
                </value>
                <value>
                    <fullName>Activities of Daily Living-Prevention Instrument Self-Report &amp; Study Partner (ADL-PI Self-Report &amp; Study Partner)</fullName>
                </value>
                <value>
                    <fullName>Activity Impairment Assessment (AIA)</fullName>
                </value>
                <value>
                    <fullName>Activity-specific Balance Confidence Scale (ABC-16)</fullName>
                </value>
                <value>
                    <fullName>Addiction Severity Index (ASI)</fullName>
                </value>
                <value>
                    <fullName>Addiction Severity Index 5th Edition (ASI 5th edition)</fullName>
                </value>
                <value>
                    <fullName>Adult ADHD Quality of Life Questionnaire (AAQoL)</fullName>
                </value>
                <value>
                    <fullName>Adult ADHD Self-Report Scale (ASRS-v1.1) Symptom Checklist Part B</fullName>
                </value>
                <value>
                    <fullName>Adult Behavior Checklist (ABCL)</fullName>
                </value>
                <value>
                    <fullName>Adult Eating Behaviour Questionnaire (AEBQ)</fullName>
                </value>
                <value>
                    <fullName>Adult Sickle Cell Quality of Life Measurement Information System Emotional Impact (ASCQ-Me® v2.0 Emotional Impact - Item Bank)</fullName>
                </value>
                <value>
                    <fullName>Adult Sickle Cell Quality of Life Measurement Information System Short Form® - Pain Impact (ASCQ-Me SF® v2.0 - Pain Impact)</fullName>
                </value>
                <value>
                    <fullName>Adult Sickle Cell Quality of Life Measurement Information System Short Form® (ASCQ-Me SF® - Emotional Impact)</fullName>
                </value>
                <value>
                    <fullName>Adult Sickle Cell Quality of Life Measurement Information System Sickle v2.0 Cell Disease - Medical History Checklist (ASCQ-Me® Sickle v2.0 Cell Disease - Medical History Checklist)</fullName>
                </value>
                <value>
                    <fullName>Adult Sickle Cell Quality of Life Measurement Information System v2.0  Social Functioning - Item Bank (ASCQ-Me® v2.0 Social Functioning - Item Bank)</fullName>
                </value>
                <value>
                    <fullName>Adult Sickle Cell Quality of Life Measurement Information System v2.0 Pain Episode Frequency and Severity Measure (ASCQ-Me® v2.0 Pain Episode Frequency and Severity Measure)</fullName>
                </value>
                <value>
                    <fullName>Adult Sickle Cell Quality of Life Measurement Information System v2.0 Pain Impact - Item Bank - (ASCQ-Me® v2.0 Pain Impact - Item Bank)</fullName>
                </value>
                <value>
                    <fullName>Adult Sickle Cell Quality of Life Measurement Information System v2.0 Sleep Impact - Item Bank (ASCQ-Me® v2.0 Sleep Impact - Item Bank)</fullName>
                </value>
                <value>
                    <fullName>Adult Sickle Cell Quality of Life Measurement Information System v2.0 Sleep Impact - Short Form (ASCQ-Me® v2.0 Sleep Impact - Short Form)</fullName>
                </value>
                <value>
                    <fullName>Adult Sickle Cell Quality of Life Measurement Information System v2.0 Social Functioning - Short Form (ASCQ-Me® v2.0 Social Functioning - Short Form)</fullName>
                </value>

                <value>
                    <fullName>Geriatric Depression Scale (GDS)</fullName>
                </value>
                <value>
                    <fullName>Geriatric Depression Scale Short Form (GDS)</fullName>
                </value>
                <value>
                    <fullName>Glasgow Coma Scale (GCS)</fullName>
                </value>
                <value>
                    <fullName>Glasgow Outcome Scale Extended (GOSE)</fullName>
                </value>
                <value>
                    <fullName>Global Assessment Scale for Wilson’s Disease (GAS for WD)</fullName>
                </value>
                <value>
                    <fullName>Global Chest Symptoms Questionnaire (GCSQ)</fullName>
                </value>
                <value>
                    <fullName>Global Eosinophilic Esophagitis Symptom Score (Global EoE)</fullName>
                </value>
                <value>
                    <fullName>Global Improvement Scale (GIS)</fullName>
                </value>
                <value>
                    <fullName>Glucocorticoid Toxicity Index-Metabolic Domains (GTI-MD)</fullName>
                </value>
                <value>
                    <fullName>Glucocorticoid Toxicity Index 2.0 (GTI 2.0)</fullName>
                </value>
                <value>
                    <fullName>Greene Climacteric Scale (GCS)</fullName>
                </value>
                <value>
                    <fullName>Haematological Malignancy Patient-Reported Outcome Measure (HM-PRO)</fullName>
                </value>
                <value>
                    <fullName>Hamilton Depression Rating Scale (HAM-D6) - Clinician Version</fullName>
                </value>
                <value>
                    <fullName>Hamilton Depression Rating Scale (HAM-D6)-Self reported version</fullName>
                </value>
                <value>
                    <fullName>Hamilton Depression Rating Scale (HDRS)</fullName>
                </value>
                <value>
                    <fullName>Hamilton Depression Scale (HAM-D17)</fullName>
                </value>
                <value>
                    <fullName>Hand Eczema Severity Index (HECSI)</fullName>
                </value>
                <value>
                    <fullName>Health and Self-Management in Diabetes-10 (HASMID-10)</fullName>
                </value>
                <value>
                    <fullName>Health Utilities Index Mark 2 (HUI2)</fullName>
                </value>
                <value>
                    <fullName>Health Utilities Index Mark 3 (HUI3)</fullName>
                </value>
                <value>
                    <fullName>Health Assessment Questionnaire - Disability Index (HAQ-DI)</fullName>
                </value>
                <value>
                    <fullName>Health Assessment Questionnaire (HAQ)</fullName>
                </value>
                <value>
                    <fullName>Health Economics Questionnaire - Baseline (HE-HEQ)</fullName>
                </value>
                <value>
                    <fullName>Health Economics Questionnaire - Follow-Up (HE-HEQ)</fullName>
                </value>
                <value>
                    <fullName>Health Questionnaire for Hand - Eczema Patients (HQ HEP)</fullName>
                </value>
                <value>
                    <fullName>Health Related Productivity Questionnaire V2 Disease-specific (HRPQ-D)</fullName>
                </value>
                <value>
                    <fullName>Health Related Productivity Questionnaire V2 Generic (HRPQ)</fullName>
                </value>
                <value>
                    <fullName>Hearing Handicap Inventory Screening Questionnaire for Adults (HHUSQA)</fullName>
                </value>
                <value>
                    <fullName>Heart Failure-Daily Sypmtom Diary (HF-DSD)</fullName>
                </value>
                <value>
                    <fullName>Heartburn Quality of Life Questionnaire (HBQOL)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COA_Type__c</fullName>
        <description>IQVIAPSA-7242</description>
        <label>COA Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ClinRO</fullName>
                </value>
                <value>
                    <fullName>ClinROObsROPRO</fullName>
                </value>
                <value>
                    <fullName>ClinROPerfO</fullName>
                </value>
                <value>
                    <fullName>ClinRoPRO</fullName>
                </value>
                <value>
                    <fullName>ObsRO</fullName>
                </value>
                <value>
                    <fullName>ObsROPRO</fullName>
                </value>
                <value>
                    <fullName>PerfO</fullName>
                </value>
                <value>
                    <fullName>PRO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cases_migrated_from_each_source_system__c</fullName>
        <description>IQVIAPSA-8885</description>
        <inlineHelpText># Cases migrated from each source system</inlineHelpText>
        <label># Cases Migrated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clinical_Type_Global__c</fullName>
        <description>IQVIAPSA-7963 Clinical type, IQVIAPSA-9102 Promote to Global Value Set</description>
        <label>Clinical Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Clinical_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collect_Languages_in_Scope__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>Collect Languages in Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Chinese (Simplified) - Web only</fullName>
                </value>
                <value>
                    <fullName>Portuguese - Web Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collect_Use_Cases__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>Collect Use Cases</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MOP/HCP</fullName>
                </value>
                <value>
                    <fullName>Sales Reps</fullName>
                </value>
                <value>
                    <fullName>PSP / MRP</fullName>
                </value>
                <value>
                    <fullName>IT Administrators</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collect_Version__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>Collect Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Web and Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>IQVIAPSA-10019</description>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compound_Molecules__c</fullName>
        <description>IQVIAPSA-7585 Compound/Molecules</description>
        <label>Analyte ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consulting_Other_Services_Products_Req_d__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>Consulting/Other Services/Products Req&apos;d</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Term_Duration__c</fullName>
        <label>Contract Term Duration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <description>IQVIAPSA-7690</description>
        <label>Countries</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>United States of America</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DBL_Date__c</fullName>
        <description>IQVIAPSA-7689</description>
        <label>DBL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Extraction_Requirements__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>Data Extraction Requirements</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields> 
    <fields>
        <fullName>Description__c</fullName>
        <description>IQVIAPSA-9755</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_if_not_within_library__c</fullName>
        <description>IQVIAPSA-7689</description>
        <label>Description if not within library</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Data_Source__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>Description of Data Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>IQVIAPSA-8972</description>
        <label>Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 year</fullName>
                </value>
                <value>
                    <fullName>2 years</fullName>
                </value>
                <value>
                    <fullName>3 years</fullName>
                </value>
                <value>
                    <fullName>4 years</fullName>
                </value>
                <value>
                    <fullName>5 years</fullName>
                </value>
                <value>
                    <fullName>6 years</fullName>
                </value>
                <value>
                    <fullName>7 years</fullName>
                </value>
                <value>
                    <fullName>8 years</fullName>
                </value>
                <value>
                    <fullName>9 years</fullName>
                </value>
                <value>
                    <fullName>10 years</fullName>
                </value>
                <value>
                    <fullName>11 years</fullName>
                </value>
                <value>
                    <fullName>12 years</fullName>
                </value>
                <value>
                    <fullName>13 years</fullName>
                </value>
                <value>
                    <fullName>14 years</fullName>
                </value>
                <value>
                    <fullName>15 years</fullName>
                </value>
                <value>
                    <fullName>16 years</fullName>
                </value>
                <value>
                    <fullName>17 years</fullName>
                </value>
                <value>
                    <fullName>18 years</fullName>
                </value>
                <value>
                    <fullName>19 years</fullName>
                </value>
                <value>
                    <fullName>20 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>E2B_Authority_and_or_License_partner__c</fullName>
        <description>IQVIAPSA-8885</description>
        <inlineHelpText>Add/delete E2B authority and/or License partner</inlineHelpText>
        <label>E2B Authority/License partner</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EV_Triage__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>EV Triage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPI_Date__c</fullName>
        <description>IQVIAPSA-7689</description>
        <label>FPI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Plan_Module__c</fullName>
        <description>IQVIAPSA-8972</description>
        <label>Grant Plan Module</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Grant Plan (Sponsor)</fullName>
                </value>
                <value>
                    <fullName>Standard of Care</fullName>
                </value>
                <value>
                    <fullName>GrantPlan for Investigator</fullName>
                </value>
                <value>
                    <fullName>Budget Build</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_many_interfaces__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>How many interfaces?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
         <fullName>Indications_List__c</fullName>
         <deleteConstraint>SetNull</deleteConstraint>
         <label>Indications</label>
         <referenceTo>Indication_List__c</referenceTo>
         <relationshipLabel>Collection Tools</relationshipLabel>
         <relationshipName>Collection_Tools</relationshipName>
         <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interface_Name__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>Interface Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LPI_Date__c</fullName>
        <description>IQVIAPSA-7689</description>
        <label>LPI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LPO_Date__c</fullName>
        <description>IQVIAPSA-7689</description>
        <label>LPO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Language_Requirement__c</fullName>
        <description>IQVIAPSA-6784</description>
        <label>Language Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Native Required</fullName>
                </value>
                <value>
                    <fullName>English + real-time translator sufficient</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Inbound_Calls_Contacts__c</fullName>
        <description>IQVIAPSA-6784</description>
        <label>Monthly Inbound Calls/Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Outbound_Calls_Contacts__c</fullName>
        <description>IQVIAPSA-6784</description>
        <label>Monthly Outbound Calls/Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_Data_Source__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>Name of Data Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_s_of_Source_System_s__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>Name(s) of Source System(s)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arisg</fullName>
                </value>
                <value>
                    <fullName>Argus</fullName>
                </value>
                <value>
                    <fullName>LSMV</fullName>
                </value>
                <value>
                    <fullName>PV24x7</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Non_English_Language__c</fullName>
        <label>No of Non-English Language</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Phone_eDiary_Engagements__c</fullName>
        <description>IQVIAPSA-8852</description>
        <label>No. of Phone/eDiary Engagements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Analyte_Global__c</fullName>
        <description>IQVIAPSA-9102 Promote to Global Value Set</description>
        <label>Number of Analyte</label>
        <type>Picklist</type>
        <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Number_of_Analyte</valueSetName>
    </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Countries__c</fullName>
        <label>Number of Countries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Data_Sources__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>Number of Data Sources</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Documents__c</fullName>
        <description>IQVIAPSA-8972</description>
        <label>Number of Documents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Enrolled_Patients__c</fullName>
        <description>IQVIAPSA-7689</description>
        <label>Number of Enrolled Patients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Signal_Users__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>Number of Signal Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Sites__c</fullName>
        <description>IQVIAPSA-7689</description>
        <label>Number of Sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Source_System_s__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>Number of Source System(s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Studies_Licences_py__c</fullName>
        <description>IQVIAPSA-8972</description>
        <label>Number of Studies/Licences py</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Studies__c</fullName>
        <label>Number of Studies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Users__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>Number of Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Visits_per_Enrolled_Patients__c</fullName>
        <label>Number of Visits per Enrolled Patients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Participant_Payments__c</fullName>
        <description>IQVIAPSA-8972</description>
        <label>Participant Payments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Screened</fullName>
                </value>
                <value>
                    <fullName>Caregiver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pass_Through_Invoices__c</fullName>
        <inlineHelpText>Base service inc (4) pass-through invoices per site</inlineHelpText>
        <label>Pass Through Invoices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>